# databridge

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  config.demo.yaml  config.gateway.yaml  config.yaml.example  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.override.yml  entrypoint.py  pyproject.toml  rollback-db.sh  start.sh  update-db.sh
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
client-side-relay/: README.md  databridge-relay.py  swagger-to-config.py
client-side-relay/tests/: docker-compose.yml  mock-openapi-service.py  relay.openapi.mock.yaml  test_databridge_relay.py
dev/: init-clickhouse.sql
docs/: architecture.md  client-relay-mode.md  comparison.md
docs/todo/: multitenant-authorization.md
grafana/: databridge-dashboard.json
specs/current/: asset-resolution.md  configuration.md  export-pipeline.md  field-extraction.md  import-pipeline.md  masking.md  sampling.md  scheduling.md  service-logging-audit-and-exceptions.md  service-metrics-health.md
src/databridge/: adapters.py  auth.py  config.py  crypto.py  export_metrics.py  logging_config.py  main.py  metrics.py  models.py  security.py
tests/: conftest.py
tests/e2e/: conftest.py  test_asset_resolution.py  test_browser_redesign.py  test_connections_add.py  test_connections_delete.py  test_connections_ping.py  test_connections_preview.py
worker/: __main__.py
(+115 files in other folders)
