[project]
name = "databridge"
version = "0.1.0"
description = "Datasource connection management and sync service"
readme = "README.md"
authors = [
    { name = "MironovSergei", email = "waityourletters@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "aioboto3>=13.0.0",
    "httpx>=0.28.1",
    "structlog>=25.5.0",
    "duckdb>=1.5.1",
    "duckdb-extensions",
    "duckdb-extension-httpfs",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "asyncpg>=0.30",
    "cryptography>=44.0",
    "alembic>=1.16",
    "psycopg2-binary>=2.9",
    "pyyaml>=6.0",
    "prometheus-client>=0.21",
    "arq>=0.26",
    "redis[hiredis]>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databridge"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "moto[s3]>=5.0.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
    "playwright>=1.49.0",
    "pytest-playwright>=0.6.0",
    "pytest-bdd>=7.0",
    "anyio[trio]>=4.0",
    "pytest-cov>=7.1.0",
    "fakeredis>=2.20",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
